feat: 前端生成异常按钮
